--- a/template1.html
+++ b/template1.html
@@ -46,7 +46,7 @@
         </main>
         <hr>
         <footer style="text-align: center"><i>Last Update : 17th feb 2019<br>
-        Webmaster :Richa Tripathi <a href="mailto:richatripathi.sta@gmail.com">richatripathi.sta@gmail.com</a> <br>
+        Webmaster :Richa Tripathi <a href="mailto:richatripathi@gmail.com">richatripathi@gmail.com</a> <br>
         &copy;copyright 2019 Richa Tripathi</i></footer>
         
     
